# when

./: .gitignore  CMakeLists.txt  README.md
include/days/: days.h
include/when/: day.h  days.h  duration.h  now.h  stamp.h
src/: CMakeLists.txt
src/days/: days.cpp  now.cpp
src/when/: day.cpp  days.cpp  duration.cpp  now.cpp  stamp.cpp
tests/: CMakeLists.txt  test_day.cpp  test_day_arithmetic.cpp  test_distance.cpp  test_duration.cpp  test_iteration.cpp  test_now.cpp  test_stamp.cpp
